# Model-View-Controller

./: README.md
01 - Fundamentals/01 - ListView and ListModel/: Readme.md
01 - Fundamentals/02 - Inline Models/: Readme.md  main.cpp
01 - Fundamentals/04 - Decoration and Section/: Readme.md
01 - Fundamentals/06 - Dynamic Model/: Main.qml  main.cpp
1 - Fundamentals/1 - ListView and ListModel/: CMakeLists.txt  Main.qml  Readme.md
1 - Fundamentals/2 - Inline Models/: Main.qml  Readme.md
1 - Fundamentals/3 - Header Footer Highlight/: Main.qml  Readme.md  main.cpp
1 - Fundamentals/4 - Decoration and Section/: Main.qml
1 - Fundamentals/5 - Repeater/: Main.qml  Readme.md  main.cpp
1 - Fundamentals/6 - Dynamic Model/: Readme.md
1-Fundamentals/1-ListView_and_ListModel/: Readme.md  main.cpp
1-Fundamentals/2-Inline_Models/: CMakeLists.txt  Readme.md
1-Fundamentals/3-Header_Footer_Highlight/: CMakeLists.txt  Readme.md
1-Fundamentals/4-Decoration_and_Section/: CMakeLists.txt  Readme.md  main.cpp
1-Fundamentals/5-Repeater/: CMakeLists.txt  Readme.md
1-Fundamentals/6-Dynamic_Model/: CMakeLists.txt  Readme.md
BONUS/MVC - Algocor Interview/: CMakeLists.txt  LeftMenu.qml  Main.qml  OrderMenu.qml  main.cpp  maincontroller.cpp  maincontroller.h
BONUS/MVC - Algocor Interview/haberlesme/: tcpmanager.cpp  tcpmanager.h  tcpsoketlib.cpp  tcpsoketlib.h
BONUS/MVC - Algocor Interview/model/: mesajlar.h  ordermodel.cpp  ordermodel.h  strategymodel.cpp  strategymodel.h
BONUS/TCPJSON SOCKET/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
